# YoutubeDownloader

./: .gitignore  CMakeLists.txt  build.bat  installer.iss
src/: Header.hpp  Source.cpp  cglob.hpp  myframe.cpp  myframe.h  mytextedit.h  popen.hpp  strconv.hpp  widget.cpp  widget.h  widget.ui
src/mytextedit/: mytextedit.cpp
src/widget/: widget.cpp  widget.h  widget.ui
